--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+material-extended-icons = { module = "androidx.compose.material:material-icons-extended", version = "1.7.8" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.8.1" }
 assertk = { module = "com.willowtreeapps.assertk:assertk", version = "0.28.1" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
@@ -34,6 +35,7 @@ retrofit-kotlinx-serialization = { module = "com.squareup.retrofit2:converter-ko
 koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version = "1.10.2" }
+robolectric = { module = "org.robolectric:robolectric", version = "4.14" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
