--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,11 +32,12 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 assertk = { module = "com.willowtreeapps.assertk:assertk", version = "0.28.1" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-kotlinx-serialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "retrofit" }
-koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version = "1.10.2" }
 robolectric = { module = "org.robolectric:robolectric", version = "4.14" }
 turbine = { module = "app.cash.turbine:turbine", version = "1.2.0" }
+okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version = "4.12.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
