--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,6 +38,7 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 robolectric = { module = "org.robolectric:robolectric", version = "4.14" }
 turbine = { module = "app.cash.turbine:turbine", version = "1.2.0" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version = "4.12.0" }
+kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm", version = "0.3.8" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
